Thu May 31 09:40:56 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1.

	* Added support for checking for timezone and tm_gmtoff.
	  Affected files are configure.ad and lib/silcutil/silctime.c.

Wed May 30 18:46:34 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added silc-toolkit.spec.in RPM spec file.

Mon May 28 23:21:39 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed nickname formatting crash when updating existing
	  client entry.  Affected file is lib/silcclient/client_entry.c.

	* Fixed MIME object encoding in attribute payload encoding.
	  Affected file is lib/silccore/silcattrs.c.

Mon May 28 09:02:26 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1 Beta6

Sun May 27 20:38:30 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Copy SILC Plugin's libfe_common_silc.so to libfe_silc.so so
	  that user's don't have to do it manually.  Affected file
	  is apps/irssi/src/fe-common/silc/core/Makefile.am.

Thu May 24 15:30:31 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1 Beta4.

	* Fixed channel and server entry freeing in client library.
	  Affected file is lib/silcclient/client_entry.c.

	* Do not allow stopping client before it has been started.
	  Affected file is lib/silcclient/client.c.

Wed May 23 23:21:03 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed formatted nickname renaming to rename also irssi's
	  nicklist (/NAMES etc).  Affected file is
	  apps/irssi/src/silc/core/client_ops.c.

	* Fixed SILC Plugin crash when stopping client library before
	  it has been started.  Affected file is
	  apps/irssi/src/silc/core/silc-core.c.

Tue May 22 17:18:54 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* For SILC Client and SILC Server check for 1.1 Toolkit
	  in configure.  Affected file is configure.ad.

	* Added better library linking flags and orders for SILC Client.
	  Affected file is configure.ad, Makefile.defines_int.in and