@@ -1,3 +1,8 @@
+Thu May 31 16:49:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed UTC offset minutes to be actually minutes.  Affected
+	  file is lib/silcutil/silctime.c.
+
 Thu May 31 09:40:56 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SILC Toolkit 1.1.
